[package]
name = "tuidocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.20.1"
crossterm = "0.26.1"
thiserror = "1.0.40"
unicode-width = "0.1.10"
lipsum = "0.9.0"
faker_rand = "0.1.1"
rand = "0.8.5"
